# Meta

./: db.sqlite3  manage.py  pyproject.toml
meta_app/: admin.py  apps.py  models.py  tests.py  views.py
meta_project/: asgi.py  settings.py  urls.py  wsgi.py
